[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "ie_titanic_utils"
authors = [{name = "Juan Luis Cano Rodríguez", email = "jcano@faculty.ie.edu"}]
readme = "README.md"
dynamic = ["version", "description"]
dependencies = [
    "pandas >=1.4",
]
